it specticilist page content

--- a/itexpert.html
+++ b/itexpert.html
@@ -628,8 +628,7 @@
                         </div>
                         <!-- from -->
                         <div class="contact__input__wrapper contact__grident__bg" style="padding: 30px;">
-                            <form id="contact-form" class="contact-form"
-                            action="email.php">
+                            <form id="contact-form" class="contact-form" action="email.php">
                                 <div class="row">
                                     <div class="col-xl-12">
                                         <div class="contact__input">
@@ -762,11 +761,9 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Custom Web Development</h5>
-                                        <span class="card-text">Digital Minds specializes in custom
-                                            WordPress
-                                            web development, enhancing your brand and creating a web
-                                            presence that aligns perfectly with your business goals.
+                                        <h5 class="card-title">Technical Support</h5>
+                                        <span class="card-text">Providing assistance to users with hardware, software,
+                                            and network issues to ensure smooth operations within an organization.
                                         </span>
                                     </div>
                                 </div>
@@ -781,11 +778,10 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Frontend/Backend Solutions</h5>
-                                        <span class="card-text">Our knowledgeable team excels in
-                                            creating impactful frontend designs and dynamic,
-                                            efficient backend solutions that ensure scalability and
-                                            robust performance.</span>
+                                        <h5 class="card-title">Network Administration</h5>
+                                        <span class="card-text">Managing and maintaining an organization’s network
+                                            infrastructure, ensuring connectivity, security, and optimal
+                                            performance.span>
                                     </div>
                                 </div>
                             </div>
@@ -799,11 +795,9 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">CMS Development</h5>
-                                        <span class="card-text">By adopting web content management
-                                            systems such as WordPress, Joomla, Drupal, and others,
-                                            website content can be updated by persons without any
-                                            technical knowledge of website design.
+                                        <h5 class="card-title">System Administration</h5>
+                                        <span class="card-text">Installing, configuring, and maintaining servers and
+                                            systems to ensure reliability, security, and performance.
                                         </span>
                                     </div>
                                 </div>
@@ -818,12 +812,11 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">E-Commerce Development
+                                        <h5 class="card-title">Security Management
                                         </h5>
-                                        <span class="card-text">Make your visitors into customers with
-                                            our comprehensive e-commerce features, including payment
-                                            PSD templates, stock tracking, and detailed reporting
-                                            tools.
+                                        <span class="card-text">Implementing and monitoring security protocols
+                                            (firewalls, encryption, etc.) to protect systems and data from cyber
+                                            threats.
                                         </span>
                                     </div>
                                 </div>
@@ -838,10 +831,9 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Web Application Development</h5>
-                                        <span class="card-text">Whether you are a small business
-                                            starting or a large enterprise, we create reliable and
-                                            robust web applications for your needs.
+                                        <h5 class="card-title"> Database Management</h5>
+                                        <span class="card-text">Managing and maintaining databases, ensuring data
+                                            integrity, security, and efficient access for applications and users.
                                         </span>
                                     </div>
                                 </div>
@@ -856,73 +848,17 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">API Integration </h5>
-                                        <span class="card-text">Automate and integrate relevant
-                                            business applications and CRMs for your website and fast
-                                            payment solutions.
+                                        <h5 class="card-title">Software Development/Integration</h5>
+                                        <span class="card-text">Developing, customizing, and integrating software
+                                            solutions to meet business needs, ensuring smooth system functionality and
+                                            user experience.
                                         </span>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <div class="card mb-3">
-                            <div class="row g-0">
-                                <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Responsive Design</h5>
-                                        <span class="card-text">The mobile-first approach is practiced
-                                            at Minds On to make the site look and work right on any
-                                            device the client is using.
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="card mb-3">
-                            <div class="row g-0">
-                                <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Website Maintenance</h5>
-                                        <span class="card-text">Another critical factor of success in
-                                            e-business is having a professional website. Keeping
-                                            your site updated and secure, we provide all maintenance
-                                            and support services for your website.
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-8 large-card">
-                        <div class="card mb-3">
-                            <div class="row g-0">
-                                <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">UI/UX Design</h5>
-                                        <span class="card-text">In UI/UX solutions Minds On
-                                            concentrates on making the design aesthetic and
-                                            functional. Our work involves the creation of designs
-                                            that meet the client’s desires concerning their targeted
-                                            customers besides helping them to meet their targets.
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+            
 
                 </div>
                 <div class="row">
