--- a/seo.html
+++ b/seo.html
@@ -705,11 +705,9 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Custom Web Development</h5>
-                                        <span class="card-text">Digital Minds specializes in custom
-                                            WordPress
-                                            web development, enhancing your brand and creating a web
-                                            presence that aligns perfectly with your business goals.
+                                        <h5 class="card-title">Keyword Research</h5>
+                                        <span class="card-text">Identifying and analyzing the most relevant and
+                                            high-traffic keywords to target for improving search engine rankings.
                                         </span>
                                     </div>
                                 </div>
@@ -724,11 +722,10 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Frontend/Backend Solutions</h5>
-                                        <span class="card-text">Our knowledgeable team excels in
-                                            creating impactful frontend designs and dynamic,
-                                            efficient backend solutions that ensure scalability and
-                                            robust performance.</span>
+                                        <h5 class="card-title">On-Page SEO</h5>
+                                        <span class="card-text">Optimizing individual web pages through proper use of
+                                            meta tags, headings, content, internal links, and URL structure for better
+                                            search visibility.</span>
                                     </div>
                                 </div>
                             </div>
@@ -742,11 +739,10 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">CMS Development</h5>
-                                        <span class="card-text">By adopting web content management
-                                            systems such as WordPress, Joomla, Drupal, and others,
-                                            website content can be updated by persons without any
-                                            technical knowledge of website design.
+                                        <h5 class="card-title">Technical SEO</h5>
+                                        <span class="card-text">Ensuring the website is search engine-friendly by
+                                            optimizing site speed, mobile responsiveness, crawlability, indexing, and
+                                            structured data.
                                         </span>
                                     </div>
                                 </div>
@@ -761,12 +757,10 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">E-Commerce Development
+                                        <h5 class="card-title">Content Optimization
                                         </h5>
-                                        <span class="card-text">Make your visitors into customers with
-                                            our comprehensive e-commerce features, including payment
-                                            PSD templates, stock tracking, and detailed reporting
-                                            tools.
+                                        <span class="card-text">Creating and refining high-quality, keyword-rich content
+                                            that is engaging and valuable to users while adhering to SEO best practices.
                                         </span>
                                     </div>
                                 </div>
@@ -781,10 +775,9 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Web Application Development</h5>
-                                        <span class="card-text">Whether you are a small business
-                                            starting or a large enterprise, we create reliable and
-                                            robust web applications for your needs.
+                                        <h5 class="card-title">Link Building</h5>
+                                        <span class="card-text">Acquiring high-quality backlinks from authoritative
+                                            websites to improve domain authority and search engine rankings.
                                         </span>
                                     </div>
                                 </div>
@@ -799,74 +792,16 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">API Integration </h5>
-                                        <span class="card-text">Automate and integrate relevant
-                                            business applications and CRMs for your website and fast
-                                            payment solutions.
+                                        <h5 class="card-title">Analytics and Reporting</h5>
+                                        <span class="card-text">Monitoring and analyzing website performance using tools
+                                            like Google Analytics and Search Console to track traffic, rankings, and SEO
+                                            campaign effectiveness.
                                         </span>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <div class="card mb-3">
-                            <div class="row g-0">
-                                <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Responsive Design</h5>
-                                        <span class="card-text">The mobile-first approach is practiced
-                                            at Minds On to make the site look and work right on any
-                                            device the client is using.
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="card mb-3">
-                            <div class="row g-0">
-                                <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Website Maintenance</h5>
-                                        <span class="card-text">Another critical factor of success in
-                                            e-business is having a professional website. Keeping
-                                            your site updated and secure, we provide all maintenance
-                                            and support services for your website.
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-8 large-card">
-                        <div class="card mb-3">
-                            <div class="row g-0">
-                                <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">UI/UX Design</h5>
-                                        <span class="card-text">In UI/UX solutions Minds On
-                                            concentrates on making the design aesthetic and
-                                            functional. Our work involves the creation of designs
-                                            that meet the client’s desires concerning their targeted
-                                            customers besides helping them to meet their targets.
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
                 <div class="row">
                     <div class="col-md-12">
