wordpress page content

--- a/wordpress.html
+++ b/wordpress.html
@@ -549,6 +549,43 @@
                                 </div>
 
                             </div>
+                            <!-- from -->
+                            <div class="contact__input__wrapper contact__grident__bg" style="padding: 30px;">
+                                <form id="contact-form" class="contact-form" action="email.php">
+                                    <div class="row">
+                                        <div class="col-xl-12">
+                                            <div class="contact__input">
+                                                <input class="contact__common__input" type="text" name="con_name"
+                                                    id="con_name" placeholder="Your Name">
+                                            </div>
+                                        </div>
+                                        <div class="col-xl-12">
+                                            <div class="contact__input">
+                                                <input class="contact__common__input" type="text" name="con_email"
+                                                    id="con_email" placeholder="Email" required>
+                                            </div>
+                                        </div>
+                                        <div class="col-xl-12">
+                                            <div class="contact__input">
+                                                <input class="contact__common__input" type="text" name="phone"
+                                                    placeholder="Phone" required>
+                                            </div>
+                                        </div>
+                                        <div class="col-xl-12">
+                                            <textarea class="contact__common__input" name="con_message" id="con_message"
+                                                cols="30" rows="10" placeholder="write a message...."></textarea>
+                                        </div>
+                                        <div class="col-xl-12">
+                                            <div class="contact__button">
+                                                <button type="submit" value="submit" class="default__button"
+                                                    name="submit">SEND MESSAGE</button>
+                                                <p class="form-messege"></p>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
 
 
 
@@ -605,32 +642,150 @@
                                     </div>
                                 </div>
                             </div>
+                         
+                        </div>
+                    </div>
+                </div>
+                <!-- card -->
+                <div class="row g-4 horizontal-card">
+                    <div class="col-md-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Theme Development</h5>
+                                        <span class="card-text">Designing and developing custom WordPress themes or
+                                            modifying existing ones to create a unique and responsive website
+                                            appearance.
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title"> Plugin Development</h5>
+                                        <span class="card-text">Creating custom plugins or configuring existing plugins
+                                            to extend WordPress functionality and add features like contact forms,
+                                            e-commerce, or SEO tools.</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title"> Website Optimization</h5>
+                                        <span class="card-text">Enhancing website speed, performance, and security,
+                                            including image compression, caching, and minimizing code to improve load
+                                            times and user experience.
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Content Management
+                                        </h5>
+                                        <span class="card-text">Managing and organizing website content, including
+                                            posts, pages, media, and categories, using WordPress’s built-in content
+                                            management system (CMS).
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Security Management </h5>
+                                        <span class="card-text">Ensuring the website is secure by implementing practices
+                                            like regular backups, firewall setup, malware scanning, and secure login
+                                            protocols to protect against cyber threats.
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card mb-3">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">SEO Optimization</h5>
+                                        <span class="card-text">Implementing on-page SEO practices like meta tags,
+                                            sitemaps, and keyword optimization within WordPress, often using SEO plugins
+                                            like Yoast or RankMath.
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- content -->
+                <div class="row">
+                    <div class="col-md-12">
 
-                            <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h4>Execution and Monitoring:</h4>
-                            </div>
-                            <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Odio facilisis mauris sit amet massa
-                                    vitae tortor condimentum. Etiam sit amet nisl purus in mollis nunc sed. Quam
-                                    vulputate dignissim suspendisse in est ante in. Amet commodo nulla facilisi nullam
-                                    vehicula. Arcu vitae elementum curabitur vitae nunc. Duis ultricies lacus sed turpis
-                                    tincidunt id aliquet risus feugiat. Aenean vel elit scelerisque mauris pellentesque
-                                    pulvinar. Turpis egestas maecenas pharetra convallis. Ac turpis egestas maecenas
-                                    pharetra convallis. Morbi tincidunt augue interdum velit euismod. Accumsan sit amet
-                                    nulla facilisi morbi tempus. Scelerisque eleifend donec pretium vulputate sapien nec
-                                    sagittis aliquam.</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Odio facilisis mauris sit amet massa
-                                    vitae tortor condimentum. Etiam sit amet nisl purus in mollis nunc sed. Quam
-                                    vulputate dignissim suspendisse in est ante in. Amet commodo nulla facilisi nullam
-                                    vehicula. Arcu vitae elementum curabitur vitae nunc. Duis ultricies lacus sed turpis
-                                    tincidunt id aliquet risus feugiat. Aenean vel elit scelerisque mauris pellentesque
-                                    pulvinar.</p>
-                            </div>
-                            <div class="service__details__button" data-aos="fade-up" data-aos-duration="1500">
-                                <a class="default__button" href="#">GET A FREE QUOTE</a>
-                            </div>
+
+                        <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
+                            <h4>Execution and Monitoring:</h4>
+                        </div>
+                        <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua. Odio facilisis mauris sit amet massa
+                                vitae tortor condimentum. Etiam sit amet nisl purus in mollis nunc sed. Quam
+                                vulputate dignissim suspendisse in est ante in. Amet commodo nulla facilisi nullam
+                                vehicula. Arcu vitae elementum curabitur vitae nunc. Duis ultricies lacus sed turpis
+                                tincidunt id aliquet risus feugiat. Aenean vel elit scelerisque mauris pellentesque
+                                pulvinar. Turpis egestas maecenas pharetra convallis. Ac turpis egestas maecenas
+                                pharetra convallis. Morbi tincidunt augue interdum velit euismod. Accumsan sit amet
+                                nulla facilisi morbi tempus. Scelerisque eleifend donec pretium vulputate sapien nec
+                                sagittis aliquam.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua. Odio facilisis mauris sit amet massa
+                                vitae tortor condimentum. Etiam sit amet nisl purus in mollis nunc sed. Quam
+                                vulputate dignissim suspendisse in est ante in. Amet commodo nulla facilisi nullam
+                                vehicula. Arcu vitae elementum curabitur vitae nunc. Duis ultricies lacus sed turpis
+                                tincidunt id aliquet risus feugiat. Aenean vel elit scelerisque mauris pellentesque
+                                pulvinar.</p>
+                                <div class="service__details__button" data-aos="fade-up" data-aos-duration="1500">
+                                    <a class="default__button" href="#">GET A FREE QUOTE</a>
+                                </div>
                         </div>
                     </div>
                 </div>
