--- a/appdevelop.html
+++ b/appdevelop.html
@@ -701,7 +701,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/Mobile Application Development/User Interface (UI) Design.png" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -719,45 +719,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/web image/coding.jpg" class="img-fluid rounded-start"
-                                        alt="...">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">User Experience (UX) Design</h5>
-                                        <span class="card-text">User Experience (UX) Design enhances user
-                                            satisfaction by improving usability, accessibility, and
-                                            interaction between users and digital products or
-                                            services</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="card mb-3">
-                            <div class="row g-0">
-                                <div class="col-md-4">
-                                    <img src="assets/img/web image/CMS.jpg" class="img-fluid rounded-start" alt="...">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Frontend/Backend development</h5>
-                                        <span class="card-text">Frontend/Backend development involves
-                                            building user interfaces and server-side logic to create
-                                            functional, interactive, and responsive web or application
-                                            experiences.
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="card mb-3">
-                            <div class="row g-0">
-                                <div class="col-md-4">
-                                    <img src="assets/img/web image/ecommerce.jpg" class="img-fluid rounded-start"
+                                    <img src="assets/img/service/IT Specialist/Database Management.png" class="img-fluid rounded-start"
                                         alt="...">
                                 </div>
                                 <div class="col-md-8">
@@ -777,7 +739,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/web image/APP Development.jpg" class="img-fluid rounded-start"
+                                    <img src="assets/img/service/IT Specialist/Software DevelopmentIntegration.png" class="img-fluid rounded-start"
                                         alt="...">
                                 </div>
                                 <div class="col-md-8">
@@ -796,11 +758,11 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/web image/API.jpg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/Software Development/Testing.png" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Testing </h5>
+                                        <h5 class="card-title">Testing</h5>
                                         <span class="card-text">Testing applications ensures functionality,
                                             performance, and reliability by identifying bugs, verifying
                                             requirements, and enhancing user satisfaction before deployment.
@@ -814,7 +776,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/web image/responsive.jpg" class="img-fluid rounded-start"
+                                    <img src="assets/img/service/Software Development/Deployment.png" class="img-fluid rounded-start"
                                         alt="...">
                                 </div>
                                 <div class="col-md-8">
@@ -834,7 +796,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/web image/maintance.jpg" class="img-fluid rounded-start"
+                                    <img src="assets/img/service/Software Development/Maintenance & Updates.png" class="img-fluid rounded-start"
                                         alt="...">
                                 </div>
                                 <div class="col-md-8">
@@ -849,24 +811,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-8 large-card">
-                        <div class="card mb-3">
-                            <div class="row g-0">
-                                <div class="col-md-4">
-                                    <img src="assets/img/web image/ui.jpg" class="img-fluid rounded-start" alt="...">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">UI/UX Design</h5>
-                                        <span class="card-text">Tools used in mobile app development include
-                                            frameworks, IDEs, and libraries that streamline coding, design,
-                                            testing, and deployment processes.
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                
                 </div>
 
                 <div class="row">
